--- a/index.html
+++ b/index.html
@@ -23,11 +23,19 @@
                 Etiopie - Natural<br>
                 Costarica - Honey
             </p>
-            <p>
+            <hr>
+            <div class="menu">
                 <a href="menu.html">NABÍDKA</a>
-            </p>
+            </div>
+            <hr>
             <p>
                 <h2>Kontakt</h2>
+                <h3>Otevírací doba</h3>
+                    <ul>
+                        <li>Po-Pá: 9-17</li>
+                        <li>So: 10-18</li>
+                    </ul>
+
                 <h3>Sídlo</h3>
                 <a href="https://mapy.cz/zakladni?source=pubt&id=17289139&x=17.1334338&y=49.0184204&z=19">
                   Nětčická 2647/80a, <br /> Kyjov 697 01
@@ -42,6 +50,6 @@
         </div>
     </body>
     <footer>
-        Kaflík
+        sociální sítě
     </footer>
 </html>
