feat: link addition

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </p>
             <hr>
             <div class="menu">
-                <a href="menu.html">NABÍDKA</a>
+                <a href="menu.html"><h2>NABÍDKA</h2></a>
             </div>
             <hr>
             <p>
@@ -45,7 +45,8 @@
                   +420 111 222 333
         
                 <h3>Email</h3>
-                <a>info@kaflik.cz</a>
+
+                <a  href="mailto:info@kaflik.cz">info@kaflik.cz</a>
             </p>
         </div>
     </body>
