style: color change

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <link rel="stylesheet" href="./style.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Grey+Qo&display=swap" rel="stylesheet">
-    </head>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">    </head>
     <body>
         <header>
                 <h1>
@@ -25,16 +24,14 @@
             </p>
             <hr>
             <div class="menu">
-                <a href="menu.html"><h2>NABÍDKA</h2></a>
+                <a href="menu.html"><h2>Nabídka</h2></a>
             </div>
             <hr>
             <p>
                 <h2>Kontakt</h2>
                 <h3>Otevírací doba</h3>
-                    <ul>
-                        <li>Po-Pá: 9-17</li>
-                        <li>So: 10-18</li>
-                    </ul>
+                        Po-Pá: 9-17<br/>
+                        So: 10-18<br/>
 
                 <h3>Sídlo</h3>
                 <a href="https://mapy.cz/zakladni?source=pubt&id=17289139&x=17.1334338&y=49.0184204&z=19">
