--- a/menu.html
+++ b/menu.html
@@ -9,8 +9,7 @@
         <link rel="stylesheet" href="./menu.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Grey+Qo&display=swap" rel="stylesheet">
-    </head>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">    </head>
     <body>
         
         <header>
@@ -39,16 +38,14 @@
                 <h3>Víno</h3>
                 <ul>
                     <li>
-                        <h4>Bílé</h4>
-                        <ul>
+                        <ul id="white">
                             <li>Tramín červený</li>
                             <li>Rulandské bílé</li>
                             <li>Rulandské šedé</li>
                         </ul>
                     </li>
                     <li>
-                        <h4>Červené</h4>
-                        <ul>
+                        <ul id="red">
                             <li>Rulandské modré</li>
                             <li>Frankovka</li>
                         </ul>
