fix: empty space on right

--- a/menu.html
+++ b/menu.html
@@ -27,6 +27,8 @@
                     <li>Espresso</li>
                     <li>Double Espresso</li>
                     <li>Espresso Lungo</li>
+                </ul>
+                <ul id="milky">
                     <li>Latte</li>
                     <li>Cappucino</li>
                     <li>Flat White</li>
