--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </h1>
             
         </header>          
-       
+        <!--<div>img</div>-->
         <div class="content">
             <p>
                 <h2>Káva na mlýnku</h2>
