feat: footer links

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
         
                 <h3>Email</h3>
 
-                <a  href="mailto:info@kaflik.cz">info@kaflik.cz</a>
+                <a href="mailto:info@kaflik.cz">info@kaflik.cz</a>
             </p>
         </div>
     </body>
     <footer>
-        sociální sítě
+        <a href="https://www.instagram.com/"><img src="img/instagram_logo.png"></a>
+        <a href="https://www.facebook.com/"><img src="img/facebook-logo.png"></a>
     </footer>
 </html>
