--- a/menu.html
+++ b/menu.html
@@ -27,8 +27,6 @@
                     <li>Espresso</li>
                     <li>Double Espresso</li>
                     <li>Espresso Lungo</li>
-                </ul>
-                <ul id="milky">
                     <li>Latte</li>
                     <li>Cappucino</li>
                     <li>Flat White</li>
@@ -68,4 +66,8 @@
         </div>
 
     </body>
+    <footer>
+        <a href="https://www.instagram.com/"><img src="img/instagram_logo.png"></a>
+        <a href="https://www.facebook.com/"><img src="img/facebook-logo.png"></a>
+    </footer>
 </html>
