feat: adding message

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 </h1>
             
         </header>          
+        <p id="message">Kavárna ještě není otevřená, ale pracujeme na tom ;)</p>
         <!--<div>img</div>-->
         <div class="content">
             <p>
